Undo unfortunate changes

--- a/translations/bloody_grail.tex/cs.po
+++ b/translations/bloody_grail.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-06-25 10:08+0000\n"
+"POT-Creation-Date: 2025-06-21 22:58+0000\n"
 "PO-Revision-Date: 2025-05-04 14:05+0000\n"
 "Last-Translator: Jakub Klus <jakub.klus@gmail.com>\n"
 "Language-Team: Czech <https://hosted.weblate.org/projects/homm3bg-fan-made-"
@@ -90,8 +90,8 @@ msgstr ""
 #. type: Plain text
 #: clash/bloody_grail.tex:3
 msgid ""
-"\\addscenariosection{1}{Clash Scenario}{Bloody Grail}{\\images/bloody-"
-"grail.png}"
+"\\addscenariosection{1}{Clash Scenario}{Bloody Grail}{\\images/bloody-grail."
+"png}"
 msgstr "\\addscenariosection{1}{Střet}{Krvavý Grál}{\\images/bloody-grail.png}"
 
 #. type: multicols*
