--- a/translations/back_cover.tex/fr.po
+++ b/translations/back_cover.tex/fr.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-06-25 10:08+0000\n"
+"POT-Creation-Date: 2025-06-21 22:58+0000\n"
 "PO-Revision-Date: 2025-03-26 09:51+0000\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -31,9 +31,9 @@ msgstr ""
 #| "\n"
 msgid ""
 "\\iftoggle{noartbackground}{}{ \\begin{tikzpicture}[remember picture, "
-"overlay, inner sep=10pt] \\node(cover)[anchor=center] at (current "
-"page.center) { \\includegraphics[height=\\paperheight, keepaspectratio]"
-"{\\layout/back.jpg} }; \\end{tikzpicture} }"
+"overlay, inner sep=10pt] \\node(cover)[anchor=center] at (current page."
+"center) { \\includegraphics[height=\\paperheight, keepaspectratio]{\\layout/"
+"back.jpg} }; \\end{tikzpicture} }"
 msgstr ""
 "\\begin{center}\n"
 "  \\includegraphics[width=0.55\\linewidth]{\\art/dimension_door.png}\n"
