--- a/translations/sentinels.tex/de.po
+++ b/translations/sentinels.tex/de.po
@@ -19,27 +19,19 @@ msgstr ""
 #.  !TeX spellcheck = en_US
 #. type: Plain text
 #: coops/sentinels.tex:3
-msgid ""
-"\\addscenariosection{1}{Cooperative Scenario}{Sentinels}{\\images/sentinel."
-"png}"
-msgstr ""
-"\\addscenariosection{1}{Kooperatives Szenario}{Wächter}{\\images/sentinel."
-"png}"
+msgid "\\addscenariosection{1}{Cooperative Scenario}{Sentinels}{\\images/sentinel.png}"
+msgstr "\\addscenariosection{1}{Kooperatives Szenario}{Wächter}{\\images/sentinel.png}"
 
 #. type: multicols
-#: coops/sentinels.tex:5 coops/titans_stronghold.tex:5
-#: coops/emerald_island.tex:5 coops/close_to_enemies.tex:5
-#: coops/stand_united.tex:5 clash/bloody_grail.tex:5 clash/force_of_will.tex:5
-#: clash/the_hunt.tex:5 clash/dragoncurse_castle.tex:5
+#: coops/sentinels.tex:5 coops/titans_stronghold.tex:5 coops/emerald_island.tex:5
+#: coops/close_to_enemies.tex:5 coops/stand_united.tex:5 clash/bloody_grail.tex:5
+#: clash/force_of_will.tex:5 clash/the_hunt.tex:5 clash/dragoncurse_castle.tex:5
 #: clash/the_fractured_kingdoms.tex:5 clash/trial_by_combat.tex:5
-#: campaigns/inferno_devilish_plan.tex:6
-#: campaigns/inferno_devilish_plan.tex:202
-#: campaigns/inferno_steadwicks_fall.tex:5
-#: campaigns/inferno_deal_with_the_devil.tex:5
+#: campaigns/inferno_devilish_plan.tex:6 campaigns/inferno_devilish_plan.tex:202
+#: campaigns/inferno_steadwicks_fall.tex:5 campaigns/inferno_deal_with_the_devil.tex:5
 #: campaigns/castle_greek_gift.tex:6 campaigns/castle_greek_gift.tex:85
 #: campaigns/castle_greek_gift.tex:138 campaigns/castle_sicilian_dragon.tex:5
-#: campaigns/castle_sicilian_dragon.tex:144
-#: campaigns/castle_two_knights_defense.tex:5
+#: campaigns/castle_sicilian_dragon.tex:144 campaigns/castle_two_knights_defense.tex:5
 #: campaigns/castle_two_knights_defense.tex:91
 #: campaigns/castle_two_knights_defense.tex:129 sections/credits.tex:10
 #: sections/random_scenario.tex:5 sections/random_scenario.tex:285
@@ -90,10 +82,9 @@ msgstr ""
 "\n"
 
 #. type: multicols
-#: coops/sentinels.tex:16 coops/titans_stronghold.tex:18
-#: coops/close_to_enemies.tex:16 coops/stand_united.tex:13
-#: clash/dragoncurse_castle.tex:17 campaigns/inferno_devilish_plan.tex:20
-#: campaigns/inferno_steadwicks_fall.tex:16
+#: coops/sentinels.tex:16 coops/titans_stronghold.tex:18 coops/close_to_enemies.tex:16
+#: coops/stand_united.tex:13 clash/dragoncurse_castle.tex:17
+#: campaigns/inferno_devilish_plan.tex:20 campaigns/inferno_steadwicks_fall.tex:16
 #: campaigns/inferno_deal_with_the_devil.tex:20
 #, no-wrap
 msgid ""
@@ -114,10 +105,9 @@ msgstr ""
 "\n"
 
 #. type: multicols
-#: coops/sentinels.tex:20 coops/titans_stronghold.tex:22
-#: coops/emerald_island.tex:18 coops/close_to_enemies.tex:20
-#: coops/stand_united.tex:17 clash/dragoncurse_castle.tex:21
-#: campaigns/inferno_devilish_plan.tex:24
+#: coops/sentinels.tex:20 coops/titans_stronghold.tex:22 coops/emerald_island.tex:18
+#: coops/close_to_enemies.tex:20 coops/stand_united.tex:17
+#: clash/dragoncurse_castle.tex:21 campaigns/inferno_devilish_plan.tex:24
 #: campaigns/inferno_steadwicks_fall.tex:20
 #: campaigns/inferno_deal_with_the_devil.tex:24
 #, no-wrap
@@ -125,7 +115,7 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Player Setup}}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
+"\\subsection*{\\MakeUppercase{Spielervorbereitung}}\n"
 "\n"
 
 #. type: multicols*
@@ -135,7 +125,7 @@ msgid ""
 "\\textbf{Player Count:} 2\n"
 "\n"
 msgstr ""
-"\\textbf{Fraktionsanzahl:} 2\n"
+"\\textbf{Spieleranzahl:} 2\n"
 "\n"
 
 #. type: multicols
@@ -149,9 +139,8 @@ msgstr ""
 "\n"
 
 #. type: multicols*
-#: coops/sentinels.tex:26 coops/titans_stronghold.tex:28
-#: clash/force_of_will.tex:24 clash/the_hunt.tex:23
-#: clash/trial_by_combat.tex:19
+#: coops/sentinels.tex:26 coops/titans_stronghold.tex:28 clash/force_of_will.tex:24
+#: clash/the_hunt.tex:23 clash/trial_by_combat.tex:19
 #, no-wrap
 msgid ""
 "\\textbf{Starting Income:} 10 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
@@ -173,8 +162,8 @@ msgid ""
 msgstr ""
 "\\textbf{Starteinheiten:}\n"
 "\\begin{itemize}\n"
-"  \\item Ein Rudel \\bronze{}-Einheiten mit den \\textit{niedrigsten} Rekrutierungskosten\n"
-"  \\item Wenige \\bronze{}-Einheiten mit den \\textit{höchsten} Rekrutierungskosten\n"
+"  \\item Ein Rudel \\bronze\\-Einheiten mit den \\textit{niedrigsten} Rekrutierungskosten\n"
+"  \\item Wenige \\bronze\\-Einheiten mit den \\textit{höchsten} Rekrutierungskosten\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -185,7 +174,7 @@ msgid ""
 "\\textbf{Town Buildings:} \\bronze\\ Dwelling, Citadel\n"
 "\n"
 msgstr ""
-"\\textbf{Startgebäude:} \\bronze{}-Behausung, Zitadelle\n"
+"\\textbf{Startgebäude:} \\bronze\\-Behausung, Zitadelle\n"
 "\n"
 
 #. type: multicols
@@ -195,7 +184,7 @@ msgid ""
 "\\textbf{Map Tile Pool:} Each player takes 1 random Near (IV--V) Map Tile and 1 random Far (II--III) Map Tile. These Tiles should not contain any Obelisks.\n"
 "\n"
 msgstr ""
-"\\textbf{Gebietsvorrat:} Jede Fraktion erhält zufällig 1 Nahes Gebiet (IV-V) und 1 Fernes Gebiet (II-III). Diese Gebiete sollten keine Obelisken enthalten.\n"
+"\\textbf{Gebietsvorrat:} Jeder Spieler erhält zufällig 1 Nahes Gebiet (IV-V) und 1 Fernes Gebiet (II-III). Diese Gebiete sollten keine Obelisken enthalten.\n"
 "\n"
 
 #. type: multicols
@@ -205,12 +194,11 @@ msgid ""
 "\\textbf{Additional Bonus:} Search (2) the Artifact Deck\n"
 "\n"
 msgstr ""
-"\\textbf{Bonus:} Durchsuche (2) den Artefaktstapel\n"
+"\\textbf{Zusätzlicher Bonus:} Durchsuche (2) den Artefaktstapel\n"
 "\n"
 
 #. type: multicols*
-#: coops/sentinels.tex:40 coops/titans_stronghold.tex:42
-#: coops/titans_stronghold.tex:78
+#: coops/sentinels.tex:40 coops/titans_stronghold.tex:42 coops/titans_stronghold.tex:78
 #, no-wrap
 msgid ""
 "\\vspace*{\\fill}\\columnbreak\n"
@@ -220,11 +208,9 @@ msgstr ""
 "\n"
 
 #. type: multicols
-#: coops/sentinels.tex:42 coops/titans_stronghold.tex:44
-#: coops/emerald_island.tex:36 coops/close_to_enemies.tex:35
-#: coops/stand_united.tex:33 clash/the_hunt.tex:35
-#: campaigns/inferno_devilish_plan.tex:88
-#: campaigns/inferno_steadwicks_fall.tex:92
+#: coops/sentinels.tex:42 coops/titans_stronghold.tex:44 coops/emerald_island.tex:36
+#: coops/close_to_enemies.tex:35 coops/stand_united.tex:33 clash/the_hunt.tex:35
+#: campaigns/inferno_devilish_plan.tex:88 campaigns/inferno_steadwicks_fall.tex:92
 #: campaigns/inferno_deal_with_the_devil.tex:52
 #, no-wrap
 msgid ""
@@ -265,13 +251,11 @@ msgstr ""
 "\n"
 
 #. type: multicols*
-#: coops/sentinels.tex:52 coops/titans_stronghold.tex:59
-#: coops/emerald_island.tex:45 coops/close_to_enemies.tex:68
-#: coops/stand_united.tex:52 campaigns/inferno_devilish_plan.tex:121
-#: campaigns/inferno_steadwicks_fall.tex:133
-#: campaigns/inferno_deal_with_the_devil.tex:83
-#: campaigns/castle_greek_gift.tex:72 campaigns/castle_sicilian_dragon.tex:81
-#: campaigns/castle_two_knights_defense.tex:77
+#: coops/sentinels.tex:52 coops/titans_stronghold.tex:59 coops/emerald_island.tex:45
+#: coops/close_to_enemies.tex:68 coops/stand_united.tex:52
+#: campaigns/inferno_devilish_plan.tex:121 campaigns/inferno_steadwicks_fall.tex:133
+#: campaigns/inferno_deal_with_the_devil.tex:83 campaigns/castle_greek_gift.tex:72
+#: campaigns/castle_sicilian_dragon.tex:81 campaigns/castle_two_knights_defense.tex:77
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Victory Conditions}}\n"
@@ -291,10 +275,9 @@ msgstr ""
 "\n"
 
 #. type: multicols
-#: coops/sentinels.tex:56 coops/titans_stronghold.tex:63
-#: coops/emerald_island.tex:49 coops/close_to_enemies.tex:74
-#: coops/stand_united.tex:56 campaigns/inferno_devilish_plan.tex:125
-#: campaigns/inferno_steadwicks_fall.tex:137
+#: coops/sentinels.tex:56 coops/titans_stronghold.tex:63 coops/emerald_island.tex:49
+#: coops/close_to_enemies.tex:74 coops/stand_united.tex:56
+#: campaigns/inferno_devilish_plan.tex:125 campaigns/inferno_steadwicks_fall.tex:137
 #: campaigns/inferno_deal_with_the_devil.tex:87
 #, no-wrap
 msgid ""
@@ -325,14 +308,13 @@ msgstr ""
 "\n"
 
 #. type: multicols
-#: coops/sentinels.tex:62 coops/titans_stronghold.tex:71
-#: coops/emerald_island.tex:53 clash/force_of_will.tex:62 clash/the_hunt.tex:61
-#: clash/dragoncurse_castle.tex:59 clash/the_fractured_kingdoms.tex:41
-#: campaigns/inferno_devilish_plan.tex:140
+#: coops/sentinels.tex:62 coops/titans_stronghold.tex:71 coops/emerald_island.tex:53
+#: clash/force_of_will.tex:62 clash/the_hunt.tex:61 clash/dragoncurse_castle.tex:59
+#: clash/the_fractured_kingdoms.tex:41 campaigns/inferno_devilish_plan.tex:140
 #: campaigns/inferno_steadwicks_fall.tex:146
-#: campaigns/inferno_deal_with_the_devil.tex:97
-#: campaigns/castle_greek_gift.tex:87 campaigns/castle_sicilian_dragon.tex:95
-#: campaigns/castle_two_knights_defense.tex:93 sections/random_scenario.tex:287
+#: campaigns/inferno_deal_with_the_devil.tex:97 campaigns/castle_greek_gift.tex:87
+#: campaigns/castle_sicilian_dragon.tex:95 campaigns/castle_two_knights_defense.tex:93
+#: sections/random_scenario.tex:287
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Timed Events}}\n"
@@ -408,13 +390,10 @@ msgstr ""
 "\n"
 
 #. type: multicols
-#: coops/sentinels.tex:85 coops/emerald_island.tex:60
-#: coops/close_to_enemies.tex:110 coops/stand_united.tex:74
-#: clash/force_of_will.tex:74 clash/the_hunt.tex:68
-#: campaigns/inferno_devilish_plan.tex:174
-#: campaigns/inferno_steadwicks_fall.tex:194
-#: campaigns/inferno_deal_with_the_devil.tex:148
-#: sections/random_scenario.tex:308
+#: coops/sentinels.tex:85 coops/emerald_island.tex:60 coops/close_to_enemies.tex:110
+#: coops/stand_united.tex:74 clash/force_of_will.tex:74 clash/the_hunt.tex:68
+#: campaigns/inferno_devilish_plan.tex:174 campaigns/inferno_steadwicks_fall.tex:194
+#: campaigns/inferno_deal_with_the_devil.tex:148 sections/random_scenario.tex:308
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Additional Rules}}\n"
@@ -588,11 +567,10 @@ msgstr ""
 "\n"
 
 #. type: multicols
-#: coops/sentinels.tex:142 coops/close_to_enemies.tex:143
-#: coops/stand_united.tex:87 clash/dragoncurse_castle.tex:85
-#: campaigns/inferno_devilish_plan.tex:224 campaigns/castle_greek_gift.tex:120
-#: campaigns/castle_greek_gift.tex:271 sections/credits.tex:28
-#: sections/random_scenario.tex:306
+#: coops/sentinels.tex:142 coops/close_to_enemies.tex:143 coops/stand_united.tex:87
+#: clash/dragoncurse_castle.tex:85 campaigns/inferno_devilish_plan.tex:224
+#: campaigns/castle_greek_gift.tex:120 campaigns/castle_greek_gift.tex:271
+#: sections/credits.tex:28 sections/random_scenario.tex:306
 #, no-wrap
 msgid ""
 "\\columnbreak\n"
@@ -603,10 +581,9 @@ msgstr ""
 
 #. type: multicols
 #: coops/sentinels.tex:144 coops/titans_stronghold.tex:110
-#: coops/titans_stronghold.tex:116 coops/stand_united.tex:94
-#: clash/bloody_grail.tex:120 clash/bloody_grail.tex:126
-#: campaigns/inferno_devilish_plan.tex:204 sections/credits.tex:30
-#: sections/credits.tex:34 sections/random_scenario.tex:316
+#: coops/titans_stronghold.tex:116 coops/stand_united.tex:94 clash/bloody_grail.tex:120
+#: clash/bloody_grail.tex:126 campaigns/inferno_devilish_plan.tex:204
+#: sections/credits.tex:30 sections/credits.tex:34 sections/random_scenario.tex:316
 #, no-wrap
 msgid ""
 "\\vspace*{\\fill}\n"
@@ -625,58 +602,54 @@ msgid ""
 msgstr ""
 "[overlay]\n"
 "  \\centering\n"
-"  \\node at (14, 6) {\\includegraphics[width=0.4\\paperwidth]{\\maps/sentinels.png}};"
+"  \\node at (14, 2) {\\includegraphics[width=0.4\\paperwidth]{\\maps/sentinels.png}};"
 
 #. type: Plain text
 #: coops/sentinels.tex:192
 msgid ""
-"\\hommtable[]{20}{ \\centering \\medskip \\textbf{Strength of Enemy Armies}\\"
-"\\ \\bigskip \\let\\origbronze\\bronze \\let\\origsilver\\silver "
+"\\hommtable[]{20}{ \\centering \\medskip \\textbf{Strength of Enemy Armies}\\\\ "
+"\\bigskip \\let\\origbronze\\bronze \\let\\origsilver\\silver "
 "\\let\\origgolden\\golden \\let\\origazure\\azure \\renewcommand{\\bronze}"
 "{\\origbronze[12]} \\renewcommand{\\silver}{\\origsilver[12]} "
-"\\renewcommand{\\golden}{\\origgolden[12]} \\renewcommand{\\azure}"
-"{\\origazure[12]} \\begin{tabularx}{0.95\\linewidth}{p{0.15\\linewidth}XXXX} "
-"& \\darkcell{Rounds 6 + 7} & \\darkcell{Rounds 8 + 9} & \\darkcell{Round "
-"10}\\\\ \\darkcell[1.4]{Easy} & \\lightcell[1.4]{\\bronze \\silver \\silver "
-"\\silver \\golden} & \\lightcell[1.4]{\\silver \\silver \\silver \\golden "
-"\\golden} & \\lightcell[1.4]{\\silver \\silver \\golden \\azure "
-"\\footref{azure} \\linebreak (2\\bronze, 4\\silver, 3\\golden, 1\\azure)}\\"
-"\\ \\darkcell[1.4]{Normal} & \\lightcell[1.4]{\\silver \\silver \\silver "
-"\\golden \\golden} & \\lightcell[1.4]{\\silver \\silver \\silver \\golden "
-"\\azure} & \\lightcell[1.4]{\\golden \\golden \\golden \\azure "
-"\\footref{azure} \\linebreak (2\\silver, 7\\golden, 1\\azure)}\\\\ "
-"\\darkcell[1.4]{Hard} & \\lightcell[1.4]{\\silver \\silver \\golden \\golden "
-"\\golden} & \\lightcell[1.4]{\\silver \\silver \\golden \\golden \\azure} & "
-"\\lightcell[1.4]{\\golden \\golden \\azure \\azure \\footref{azure} "
-"\\linebreak (2\\silver, 6\\golden, 2\\azure)}\\\\ \\darkcell[1.4]"
-"{Impossible} & \\lightcell[1.4]{\\silver \\golden \\golden \\golden "
-"\\golden} & \\lightcell[1.4]{\\golden \\golden \\golden \\golden \\azure} & "
-"\\lightcell[1.4]{\\golden \\azure \\azure \\azure \\footref{azure} "
-"\\linebreak (7\\golden, 3\\azure)}\\\\ \\end{tabularx} }"
+"\\renewcommand{\\golden}{\\origgolden[12]} \\renewcommand{\\azure}{\\origazure[12]} "
+"\\begin{tabularx}{0.95\\linewidth}{p{0.15\\linewidth}XXXX} & \\darkcell{Rounds 6 + "
+"7} & \\darkcell{Rounds 8 + 9} & \\darkcell{Round 10}\\\\ \\darkcell[1.4]{Easy} & "
+"\\lightcell[1.4]{\\bronze \\silver \\silver \\silver \\golden} & \\lightcell[1.4]"
+"{\\silver \\silver \\silver \\golden \\golden} & \\lightcell[1.4]{\\silver \\silver "
+"\\golden \\azure \\footref{azure} \\linebreak (2\\bronze, 4\\silver, 3\\golden, "
+"1\\azure)}\\\\ \\darkcell[1.4]{Normal} & \\lightcell[1.4]{\\silver \\silver \\silver "
+"\\golden \\golden} & \\lightcell[1.4]{\\silver \\silver \\silver \\golden \\azure} & "
+"\\lightcell[1.4]{\\golden \\golden \\golden \\azure \\footref{azure} \\linebreak "
+"(2\\silver, 7\\golden, 1\\azure)}\\\\ \\darkcell[1.4]{Hard} & \\lightcell[1.4]"
+"{\\silver \\silver \\golden \\golden \\golden} & \\lightcell[1.4]{\\silver \\silver "
+"\\golden \\golden \\azure} & \\lightcell[1.4]{\\golden \\golden \\azure \\azure "
+"\\footref{azure} \\linebreak (2\\silver, 6\\golden, 2\\azure)}\\\\ \\darkcell[1.4]"
+"{Impossible} & \\lightcell[1.4]{\\silver \\golden \\golden \\golden \\golden} & "
+"\\lightcell[1.4]{\\golden \\golden \\golden \\golden \\azure} & \\lightcell[1.4]"
+"{\\golden \\azure \\azure \\azure \\footref{azure} \\linebreak (7\\golden, 3\\azure)}"
+"\\\\ \\end{tabularx} }"
 msgstr ""
-"\\hommtable[]{20}{ \\centering \\medskip \\textbf{Schwierigkeitsgrad der "
-"feindlichen Armeen}\\\\ \\bigskip \\let\\origbronze\\bronze "
-"\\let\\origsilver\\silver \\let\\origgolden\\golden \\let\\origazure\\azure "
-"\\renewcommand{\\bronze}{\\origbronze[12]} \\renewcommand{\\silver}"
-"{\\origsilver[12]} \\renewcommand{\\golden}{\\origgolden[12]} "
-"\\renewcommand{\\azure}{\\origazure[12]} \\begin{tabularx}{0.95\\linewidth}"
-"{p{0.15\\linewidth}XXXX} & \\darkcell{Runden 6 + 7} & \\darkcell{Runden 8 + "
-"9} & \\darkcell{Runde 10}\\\\ \\darkcell[1.4]{Leicht} & \\lightcell[1.4]"
-"{\\bronze \\silver \\silver \\silver \\golden} & \\lightcell[1.4]{\\silver "
-"\\silver \\silver \\golden \\golden} & \\lightcell[1.4]{\\silver \\silver "
-"\\golden \\azure \\footref{azure} \\linebreak (2\\bronze, 4\\silver, "
-"3\\golden, 1\\azure)}\\\\ \\darkcell[1.4]{Normal} & \\lightcell[1.4]"
-"{\\silver \\silver \\silver \\golden \\golden} & \\lightcell[1.4]{\\silver "
-"\\silver \\silver \\golden \\azure} & \\lightcell[1.4]{\\golden \\golden "
-"\\golden \\azure \\footref{azure} \\linebreak (2\\silver, 7\\golden, "
-"1\\azure)}\\\\ \\darkcell[1.4]{Experte} & \\lightcell[1.4]{\\silver \\silver "
-"\\golden \\golden \\golden} & \\lightcell[1.4]{\\silver \\silver \\golden "
-"\\golden \\azure} & \\lightcell[1.4]{\\golden \\golden \\azure \\azure "
-"\\footref{azure} \\linebreak (2\\silver, 6\\golden, 2\\azure)}\\\\ "
-"\\darkcell[1.4]{Unmöglich} & \\lightcell[1.4]{\\silver \\golden \\golden "
-"\\golden \\golden} & \\lightcell[1.4]{\\golden \\golden \\golden \\golden "
-"\\azure} & \\lightcell[1.4]{\\golden \\azure \\azure \\azure "
-"\\footref{azure} \\linebreak (7\\golden, 3\\azure)}\\\\ \\end{tabularx} }"
+"\\hommtable[]{20}{ \\centering \\medskip \\textbf{Schwierigkeitsgrad der feindlichen "
+"Armeen}\\\\ \\bigskip \\let\\origbronze\\bronze \\let\\origsilver\\silver "
+"\\let\\origgolden\\golden \\let\\origazure\\azure \\renewcommand{\\bronze}"
+"{\\origbronze[12]} \\renewcommand{\\silver}{\\origsilver[12]} "
+"\\renewcommand{\\golden}{\\origgolden[12]} \\renewcommand{\\azure}{\\origazure[12]} "
+"\\begin{tabularx}{0.95\\linewidth}{p{0.15\\linewidth}XXXX} & \\darkcell{Runden 6 + "
+"7} & \\darkcell{Runden 8 + 9} & \\darkcell{Runde 10}\\\\ \\darkcell[1.4]{Leicht} & "
+"\\lightcell[1.4]{\\bronze \\silver \\silver \\silver \\golden} & \\lightcell[1.4]"
+"{\\silver \\silver \\silver \\golden \\golden} & \\lightcell[1.4]{\\silver \\silver "
+"\\golden \\azure \\footref{azure} \\linebreak (2\\bronze, 4\\silver, 3\\golden, "
+"1\\azure)}\\\\ \\darkcell[1.4]{Normal} & \\lightcell[1.4]{\\silver \\silver \\silver "
+"\\golden \\golden} & \\lightcell[1.4]{\\silver \\silver \\silver \\golden \\azure} & "
+"\\lightcell[1.4]{\\golden \\golden \\golden \\azure \\footref{azure} \\linebreak "
+"(2\\silver, 7\\golden, 1\\azure)}\\\\ \\darkcell[1.4]{Experte} & \\lightcell[1.4]"
+"{\\silver \\silver \\golden \\golden \\golden} & \\lightcell[1.4]{\\silver \\silver "
+"\\golden \\golden \\azure} & \\lightcell[1.4]{\\golden \\golden \\azure \\azure "
+"\\footref{azure} \\linebreak (2\\silver, 6\\golden, 2\\azure)}\\\\ \\darkcell[1.4]"
+"{Unmöglich} & \\lightcell[1.4]{\\silver \\golden \\golden \\golden \\golden} & "
+"\\lightcell[1.4]{\\golden \\golden \\golden \\golden \\azure} & \\lightcell[1.4]"
+"{\\golden \\azure \\azure \\azure \\footref{azure} \\linebreak (7\\golden, 3\\azure)}"
+"\\\\ \\end{tabularx} }"
 
 #. type: Plain text
 #: coops/sentinels.tex:196
@@ -689,5 +662,5 @@ msgid ""
 "Always 1 Unit of Azure Dragons (starting Units of Boss Army). The rest is "
 "random\\label{azure}."
 msgstr ""
-"Immer 1 Einheit Azurdrachen (Starteinheiten der Boss-Armee). Der Rest wird "
-"zufällig bestimmt\\label{azure}."
+"Immer 1 Einheit Azurdrachen (Starteinheiten der Boss-Armee). Der Rest wird zufällig "
+"bestimmt\\label{azure}."
