--- a/translations/sentinels.tex/de.po
+++ b/translations/sentinels.tex/de.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2025-06-21 22:58+0000\n"
+"POT-Creation-Date: 2025-06-26 21:13+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -20,11 +20,11 @@ msgstr ""
 #. type: Plain text
 #: coops/sentinels.tex:3
 msgid ""
-"\\addscenariosection{1}{Cooperative Scenario}{Sentinels}{\\images/sentinel."
-"png}"
+"\\addscenariosection{1}{Cooperative Scenario}{Sentinels}{\\images/"
+"sentinel.png}"
 msgstr ""
-"\\addscenariosection{1}{Kooperatives Szenario}{Wächter}{\\images/sentinel."
-"png}"
+"\\addscenariosection{1}{Kooperatives Szenario}{Wächter}{\\images/"
+"sentinel.png}"
 
 #. type: multicols
 #: coops/sentinels.tex:5 coops/titans_stronghold.tex:5
@@ -120,254 +120,19 @@ msgstr ""
 #: campaigns/inferno_devilish_plan.tex:24
 #: campaigns/inferno_steadwicks_fall.tex:20
 #: campaigns/inferno_deal_with_the_devil.tex:24
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Player Setup}}\n"
 "\n"
-msgstr ""
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielervorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielervorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielervorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielervorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielervorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielervorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielervorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielervorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielervorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
+msgstr "\\subsection*{\\MakeUppercase{Spielervorbereitung}}\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:22 clash/dragoncurse_castle.tex:23
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "\\textbf{Player Count:} 2\n"
 "\n"
 msgstr ""
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\textbf{Fraktionsanzahl:} 2\n"
-"\n"
-"#-#-#-#-#  de.po  #-#-#-#-#\n"
-"\\textbf{Spieleranzahl:} 2\n"
-"\n"
-"#-#-#-#-#  de.po  #-#-#-#-#\n"
 "\\textbf{Spieleranzahl:} 2\n"
 "\n"
 
@@ -395,7 +160,7 @@ msgstr ""
 
 #. type: multicols*
 #: coops/sentinels.tex:32 clash/the_hunt.tex:29
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "\\textbf{Starting Units:}\n"
 "\\begin{itemize}\n"
@@ -404,22 +169,6 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\textbf{Starteinheiten:}\n"
-"\\begin{itemize}\n"
-"  \\item Ein Rudel \\bronze{}-Einheiten mit den \\textit{niedrigsten} Rekrutierungskosten\n"
-"  \\item Wenige \\bronze{}-Einheiten mit den \\textit{höchsten} Rekrutierungskosten\n"
-"\\end{itemize}\n"
-"\n"
-"#-#-#-#-#  de.po  #-#-#-#-#\n"
-"\\textbf{Starteinheiten:}\n"
-"\\begin{itemize}\n"
-"  \\item Ein Rudel \\bronze\\-Einheiten mit den \\textit{niedrigsten} Rekrutierungskosten\n"
-"  \\item Wenige \\bronze\\-Einheiten mit den \\textit{höchsten} Rekrutierungskosten\n"
-"\\end{itemize}\n"
-"\n"
-"#-#-#-#-#  de.po  #-#-#-#-#\n"
 "\\textbf{Starteinheiten:}\n"
 "\\begin{itemize}\n"
 "  \\item Ein Rudel \\bronze{}-Einheiten mit den \\textit{niedrigsten} Rekrutierungskosten\n"
@@ -429,20 +178,12 @@ msgstr ""
 
 #. type: multicols*
 #: coops/sentinels.tex:34 campaigns/castle_greek_gift.tex:35
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "\\textbf{Town Buildings:} \\bronze\\ Dwelling, Citadel\n"
 "\n"
 msgstr ""
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
 "\\textbf{Startgebäude:} \\bronze{}-Behausung, Zitadelle\n"
-"\n"
-"#-#-#-#-#  de.po  #-#-#-#-#\n"
-"\\textbf{Startgebäude:} \\bronze\\-Behausung, Zitadelle\n"
-"\n"
-"#-#-#-#-#  de.po  #-#-#-#-#\n"
-"\\textbf{Startgebäude:} \\bronze\\-Behausung, Zitadelle\n"
 "\n"
 
 #. type: multicols
@@ -882,7 +623,7 @@ msgid ""
 msgstr ""
 "[overlay]\n"
 "  \\centering\n"
-"  \\node at (14, 2) {\\includegraphics[width=0.4\\paperwidth]{\\maps/sentinels.png}};"
+"  \\node at (14, 6) {\\includegraphics[width=0.4\\paperwidth]{\\maps/sentinels.png}};"
 
 #. type: Plain text
 #: coops/sentinels.tex:192
